fix: align search form by center

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,4 +17,5 @@
   --lghost-color: #f2f2f2;
   --accent-color: #2BE080;
   --preloader-color: #073042;
+  --input-focus-color: #073042;
 }
