--- a/src/components/FilterBar/FilterBar.css
+++ b/src/components/FilterBar/FilterBar.css
@@ -1,26 +1,18 @@
 .filter-bar {
-  margin: 66px 70px 80px 80px;
   max-width: 1280px;
-  padding: 0 15px 66px 10px;
+  padding: 60px 68px 144px;
   box-sizing: border-box;
   border-bottom: 1px solid var(--ghost-color);
-  display:flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  gap: 42px;
 }
 
 @media screen and (max-width: 800px) {
   .filter-bar {
-    margin: 76px auto;
-    padding: 0 15px 76px;
+    padding: 70px 30px 148px;
   }
 }
 
 @media screen and (max-width: 600px) {
   .filter-bar {
-    margin: 82px auto 0px;
-    padding: 0 15px 58px;
+    padding: 76px 14px 60px;
   }
 }
